@@ -7,6 +7,10 @@ Changes in 0.60.2:
     them in %(thisdocdir)s automatically.  AutoDoc is disabled by calling
     Doc without calling AutoDoc, which means that existing recipes that
     call Doc will not show changes.
+  * getPackageBranchPathIds() now returns version and fileId as well,
+    so that the IdGen class can determine if an older version number
+    should be assigned to files.  getPackageBranchPathIds() is now the
+    primary mechanism for populating the pathId dictionary.
 
 Changes in 0.60.1:
   * Support for legacy clients (protocol version 29) has been removed from
